1) Temporary removed Link from dashboard (cause bugs on router. Need to be fixed) 2) Added overflow to #main element. NEED testing on all pages!

--- a/frontend/containers/main-page.scss
+++ b/frontend/containers/main-page.scss
@@ -7,4 +7,5 @@
    top: $header-height;
    background-color: lighten($color-blue-grey, 50%);
    bottom: 0;
+   overflow-y: overlay;
 }
